<resources>
    <string name="app_name">IT_Samsung_Finals</string>
    <string name="title_profile">Профиль</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_search">Поиск</string>
    <string name="enter_social_media">Введите ссылку</string>
    <string name="social_media_link">Ссылка на социальную сеть</string>
    <string name="exit">Выйти</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="enter_country">Введите страну</string>
    <string name="enter_city">Введите город</string>
    <string name="requests">Требования к клиентам</string>
    <string name="hint_requests">Введите ваши условия проведения экскурсии</string>
    <string name="settings">Настройки</string>
    <string name="search_hint">Поиск пользователей</string>
    <string name="search_title">Search</string>
    <string name="login">Вход в систему</string>
    <string name="loginButton">Войти</string>
    <string name="registerButton">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_hint">qwerty</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="name_hint">Введите имя</string>
    <string name="surname_hint">Введите фамилию</string>
    <string name="social_meida_hint">Введите ссылку на соцсеть</string>
    <string name="country_hint">Введите вашу страну</string>
    <string name="city_hint">Введите ваш город</string>
    <string name="dialog_title">Фотография</string>
    <string name="choose_from_gallery">Выбрать из галереи</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="camera_permission_explanation">Доступ к камере необходим для того, чтобы сделать снимок</string>
    <string name="camera_permission_denied_explanation">Приложение не сможет делать фотографии</string>
    <string name="select_from_gallery">Выберите фото из галереи</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="error">Ошибка</string>
    <string name="location">Локация:</string>
    <string name="my_demands">Я погуляю с вами, если:</string>
    <string name="contact">Написать!</string>
    <string name="create_route">Создание маршрута</string>
    <string name="location_permission_denied_explanation">Выберите город вручную</string>
    <string name="location_permission_explanation">Приложению необходимо разрешение на местоположение</string>
    <string name="my_routes">Мои маршруты</string>
    <string name="add_new">Добавить новый...</string>
    <string name="your_routes">Управление маршрутами</string>
    <string name="new_route">Новый маршрут</string>
    <string name="enable_providers">Пожалуйста, включите GPS и Интернет</string>
    <string name="save">Сохранить</string>
    <string name="close">Закрыть</string>
    <string name="copy_noun">копия</string>
    <string name="beginning">Начало</string>
    <string name="end">Конец</string>
    <string name="add_to_calendar">Добавить событие в календарь</string>
    <string name="excursion_with_user">Экскурсия с пользователем</string>
    <string name="excursions">Экскурсии</string>
    <string name="save_excursion">Сохранить напоминание об эксурсии</string>
    <string name="delete_q">Удалить?</string>
    <string name="cancel">Отменить</string>
    <string name="delete">Удалить</string>
    <string name="excursion_already_exists">Эта экскурсия уже сохранена</string>
    <string name="hello_interested">Здравствуйте, я заинтересован</string>
</resources>
