<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        style="@style/ToolBarStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email_edit"
        style="@style/EntryFieldStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="60dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/login_title"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="@+id/login_title"
        app:layout_constraintTop_toBottomOf="@+id/login_title" />

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="0dp"
        style="@style/EntryFieldStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/login_email_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email_edit"
        app:layout_constraintTop_toBottomOf="@+id/login_email_edit" />

    <TextView
        android:id="@+id/login_title"
        style="@style/LoginStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_toolbar" />

    <TextView
        android:id="@+id/login_email_caption"
        style="@style/captionStyle"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/login_email_edit"
        app:layout_constraintStart_toStartOf="@+id/login_email_edit" />

    <TextView
        android:id="@+id/login_password_caption"
        style="@style/captionStyle"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/login_password_edit"
        app:layout_constraintStart_toStartOf="@+id/login_password_edit" />

    <Button
        android:id="@+id/login_sign_in_button"
        style="@style/ButtonStyle"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/loginButton"
        app:layout_constraintBottom_toBottomOf="@+id/login_sign_up_button"
        app:layout_constraintEnd_toStartOf="@+id/login_sign_up_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_password_edit"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/login_sign_up_button"
        style="@style/AccentButtonStyle"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="40dp"
        android:text="@string/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_edit" />

</android.support.constraint.ConstraintLayout>